--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@mui/styles": "^6.4.0",
     "@toolpad/core": "^0.12.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
